syntax = "proto3";

package webhook_proto;

enum HttpMethod {
  HttpMethod_UNKNOWN = 0;
  HttpMethod_GET = 1;
  HttpMethod_POST = 2;
  HttpMethod_PUT = 3;
  HttpMethod_DELETE = 4;
  HttpMethod_HEAD = 5;
  HttpMethod_PATCH = 6;
}

message SimpleRetry {
  uint32 max_num_attempts = 1;
  double delay_s = 2;
}

message ExponentialBackoffRetry {
  uint32 max_num_attempts = 1;
  double delay_s = 2;
  double max_delay_s = 3;
}

message RetryConfig {
  oneof policy {
    SimpleRetry simple = 1;
    ExponentialBackoffRetry exponential_backoff = 2;
  }
}

message Webhook {
  HttpMethod http_method = 1;
  string url = 2;
  double timeout_s = 3;
  RetryConfig retry = 4;
}
